# BOR4SIGE

./: .gitignore  Dossier_NotebookLM_Bor4SIGE.md  PLAN_MEJORAS.md  README.md  api-sync.js  build_packages.ps1  git_status_utf8.txt  index.html  iniciar_servidor.bat  manual_de_uso.md  migrate_to_kv.js  package-lock.json  server.js  setup_kv_schema.sql
1_App_BOR4SIGE/: .dockerignore  Dockerfile  api-sync.js  auth.js  database.js  db_migration.js  db_operations.js  encryption.js  index.html  iniciar_servidor.bat  iniciar_servidor.sh  migrate_to_uuid_kv.js  package-lock.json  package.json  server.js  setup_db.js  test_endpoints.js
2_Bor4Legal/: .gitignore  README.md  pyproject.toml
2_Bor4Legal/docs/: CONTRATOS_PLANTILLA_MODULAR.md  QUICKSTART.md
2_Bor4Legal/src/bor4legal/: __init__.py  cli.py
2_Bor4Legal/src/bor4legal/catalogs/: __init__.py  loader.py  schemas.py
2_Bor4Legal/src/bor4legal/domain/: __init__.py
2_Bor4Legal/src/bor4legal/domain/profile/: __init__.py  converter.py
2_Bor4Legal/src/bor4legal/engine/: __init__.py  evaluator.py  oe_renderer.py  reglas.py  types.py
2_Bor4Legal/src/bor4legal/security/: __init__.py  l2_amnesia.py  rbac.py
2_Bor4Legal/tests/: __init__.py
2_Bor4Legal/tests/cantera/: __init__.py  test_converter.py  test_engine.py  test_integration.py  test_smoke_e2e.py
3_Bor4Privacy/: pyproject.toml
3_Bor4Quality/: pyproject.toml
3_Bor4Quality/docs/: CONTRATOS_PLANTILLA_MODULAR.md
3_Bor4Quality/src/bor4quality/: __init__.py  cli.py
3_Bor4Quality/src/bor4quality/engine/: __init__.py  evaluator.py  oe_renderer.py  reglas.py  types.py
3_Bor4Quality/src/bor4quality/security/: __init__.py  integration.py  rbac.py
3_Bor4Quality/tests/cantera/: test_integration.py  test_smoke_e2e.py
3_Bor4Risk/: _perfil_v0.json  pyproject.toml
3_Bor4Risk/docs/: CONTRATOS_PLANTILLA_MODULAR.md
3_Bor4Risk/src/bor4risk/: __init__.py  cli.py
3_Bor4Risk/src/bor4risk/engine/: __init__.py  evaluator.py  oe_renderer.py  reglas.py  types.py
3_Bor4Risk/src/bor4risk/security/: __init__.py  rbac.py
3_Bor4Risk/tests/cantera/: test_integration.py  test_smoke_e2e.py
4_Documentos/: Auditoria_BD_SIGE.md  CHANGELOG.md  Dossier_NotebookLM_Bor4SIGE.md  INFORME_AUDITORIA_2026-06-20.md  INFORME_AUDITORIA_2026-06-21.md  (+5 more)
bor4common/: pyproject.toml
bor4common/src/bor4common/: __init__.py
bor4common/src/bor4common.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
bor4common/src/bor4common/security/: __init__.py  integration.py  rbac.py
(+146 files in other folders)
