[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bor4legal"
version = "0.1.0"
description = "Subproyecto externo de Requisitos Legales para BOR4SIGE"
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3.10+", "Topic :: Law", "Topic :: Compliance"]
dependencies = ["bor4common"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
